# ScrapeMind

./: .env.example  .env.local  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PROJECT.md  README.md  babel.cfg  development.bat  pyproject.toml  requirements.txt  setup.bat  wsgi.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  extensions.py
app/core/: _i18n_noop.py  base_model.py  soft_delete.py
app/core/audit/: middleware.py  routes.py
app/core/auth/: __init__.py  decorators.py  forms.py  password_policy.py  routes.py  service.py  totp_service.py
app/modules/: __init__.py
app/tasks/: __init__.py  core_tasks.py  schedule.py  scrape_tasks.py
docker/: Dockerfile  docker-compose.local.yml  docker-compose.yml  entrypoint.sh
migrations/versions/: 1a11ff73541b_academic_identifiers_multi_email.py  4b3579876684_initial.py  66b5ff3b9659_remove_is_primary_add_keywords_cleanup_.py  a2d5a117ba89_papers_user_papers.py  b41e9d27c5a8_users_totp_columns.py  c7f2e84a1b9d_user_papers_favorite_dismiss_and_notes.py  cdf83a408b68_user_sessions_table.py  e4a92f17b8d6_paper_analyses_and_translations.py  f3b1a0c2d8e7_seed_user_nav_items.py
scripts/: create_module.py  export_core_template.py  seed.py
tests/: conftest.py
tests/core/: test_audit_filter.py  test_auth.py  test_email.py  test_menu.py  test_models.py  test_profile.py  test_rbac.py  test_register_reset.py  test_search.py  test_totp.py  test_users.py
tests/modules/: test_academic_emails.py  test_academic_keywords.py  test_celery_smoke.py  test_identifier_seeds.py  test_scrape.py
(+120 files in other folders)
